app-space/food-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-service
  namespace: app-space
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-food
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-food
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-food
  template:
    metadata:
      labels:
        app: webapp-food
    spec:
      containers:
      - image: kodekloud/ecommerce:food
        imagePullPolicy: Always
        name: webapp-food
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
